basic doc structure and css

--- a/index.html
+++ b/index.html
@@ -4,17 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gardening Cub</title>
-    <link rel="stylesheet" type="text" href="style/styles.css">
+    <link rel="stylesheet" href="style/styles.css" type="text/css">
 </head>
 <body>
-    <header class="navbar"></header>
+    <header class="navbar">
+        <nav>
+            <ul class="container">
+                <a href="#"><li>Events</li></a>
+                <a href="#"><li>Events</li></a>
+                <a href="#"><li>Events</li></a>
+            </ul>
+        </nav>
+    </header>
     <div class="main">
-        <div class="intro"></div>
-        <div class="summary"></div>
-        <div class="testimonials"></div>
-        <div class="photos"></div>
-        <div class="meetups"></div>
+        <div class="intro">
+            <div class="intro-banner">
+                <h1>Community Garden Club</h1>
+            </div>
+        </div>
+        <div class="summary">
+            <h2>Meet up. Cultivate plants and community.</h2>
+            <p>
+                Come join our vibrant community who enjoy gardening, farming
+                and enjoying socializing with your neighbors and brightening our 
+                community! Community Garden Club is a free MeetUp group sponsored by our <a href="#">local government</a>
+            </p>
+        </div>
+        <div class="photos">
+            <img src="#" alt="photo description">
+            <img src="#" alt="photo description">
+            <img src="#" alt="photo description">
+        </div>
+        <div class="testimonials">
+            <blockquote>
+                <p>
+                    I build my weeknight plans around their events.
+                    I can exercise and meet new people every week!"
+                </p>
+                <footer>- Jane Doe, <cite>Community member</cite></footer>
+            </blockquote>
+        </div>
+        <div class="photos">
+            <img src="#" alt="photo description">
+            <img src="#" alt="photo description">
+            <img src="#" alt="photo description">
+        </div>
+        <div class="meetups">
+            <h3>Come join the fun!</h3>
+            <img src="#" alt="photo">
+            <p>We meet every evening in the city square at 7PM!</p>
+        </div>
     </div>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <p>Hello, I'm a footer</p>
+    </footer>
 </body>
 </html>
