added stock images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gardening Cub</title>
     <link rel="stylesheet" href="style/styles.css" type="text/css">
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
@@ -31,27 +35,26 @@
             </p>
         </div>
         <div class="photos">
-            <img src="#" alt="photo description">
-            <img src="#" alt="photo description">
-            <img src="#" alt="photo description">
+            <img src="https://images.unsplash.com/photo-1527863280617-15596f92e5c8?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
+            <img src="https://images.unsplash.com/photo-1618935810018-dd4adbb64b78?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
+            <img src="https://images.unsplash.com/photo-1524247108137-732e0f642303?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
         </div>
         <div class="testimonials">
             <blockquote>
-                <p>
-                    I build my weeknight plans around their events.
-                    I can exercise and meet new people every week!"
-                </p>
+                <p>"You get to meet some lovely people, and it's 
+                    so rewarding putting effort into your plot and
+                    watching it grow!</p>
                 <footer>- Jane Doe, <cite>Community member</cite></footer>
             </blockquote>
         </div>
         <div class="photos">
-            <img src="#" alt="photo description">
-            <img src="#" alt="photo description">
-            <img src="#" alt="photo description">
+            <img src="https://images.unsplash.com/photo-1631195414013-85b70ff2c180?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
+            <img src="https://plus.unsplash.com/premium_photo-1681965509696-7fc54b52281d?q=80&w=1074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
+            <img src="https://images.unsplash.com/photo-1628243989859-db92e2de1340?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
         </div>
         <div class="meetups">
             <h3>Come join the fun!</h3>
-            <img src="#" alt="photo">
+            <img src="https://images.unsplash.com/photo-1601566674556-3ac2a27fec9f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo">
             <p>We meet every evening in the city square at 7PM!</p>
         </div>
     </div>
