--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="navbar">
-        <nav>
+        <nav class="container">
             <ul class="container">
                 <a href="#"><li>Events</li></a>
                 <a href="#"><li>Events</li></a>
@@ -21,11 +21,13 @@
         </nav>
     </header>
     <div class="main">
+
         <div class="intro">
-            <div class="intro-banner">
+            <div class="intro-banner container">
                 <h1>Community Garden Club</h1>
             </div>
         </div>
+
         <div class="summary">
             <h2>Meet up. Cultivate plants and community.</h2>
             <p>
@@ -34,11 +36,13 @@
                 community! Community Garden Club is a free MeetUp group sponsored by our <a href="#">local government</a>
             </p>
         </div>
+
         <div class="photos">
             <img src="https://images.unsplash.com/photo-1527863280617-15596f92e5c8?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
             <img src="https://images.unsplash.com/photo-1618935810018-dd4adbb64b78?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
             <img src="https://images.unsplash.com/photo-1524247108137-732e0f642303?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
         </div>
+
         <div class="testimonials">
             <blockquote>
                 <p>"You get to meet some lovely people, and it's 
@@ -47,19 +51,23 @@
                 <footer>- Jane Doe, <cite>Community member</cite></footer>
             </blockquote>
         </div>
-        <div class="photos">
+
+        <div class="photos container">
             <img src="https://images.unsplash.com/photo-1631195414013-85b70ff2c180?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
             <img src="https://plus.unsplash.com/premium_photo-1681965509696-7fc54b52281d?q=80&w=1074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
             <img src="https://images.unsplash.com/photo-1628243989859-db92e2de1340?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo description">
         </div>
+
         <div class="meetups">
             <h3>Come join the fun!</h3>
             <img src="https://images.unsplash.com/photo-1601566674556-3ac2a27fec9f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo">
             <p>We meet every evening in the city square at 7PM!</p>
         </div>
     </div>
+
     <footer class="footer">
         <p>Hello, I'm a footer</p>
     </footer>
+
 </body>
 </html>
